save recorded files

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
       <button id="startBtn">Start</button>
       <button id="stopBtn">Stop</button>
     </div>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
