--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
     <div class="container">
       <h1>Audio recording</h1>
+      <label for="enableTranscriptions"
+        ><input type="checkbox" id="enableTranscriptions" /> Enable
+        transcriptions</label
+      >
       <progress id="audioLevel" max="1" value="0"></progress>
       <button id="startBtn">Start</button>
       <button id="stopBtn">Stop</button>
