demo: let the user choose the audio device

--- a/packages/media-tools-demo/index.html
+++ b/packages/media-tools-demo/index.html
@@ -9,6 +9,9 @@
   <body>
     <div class="container">
       <h1>Audio recording</h1>
+      <select id="audioSource" disabled>
+        <option value="no-device">No audio device found…</option>
+      </select>
       <label for="enableTranscriptions"
         ><input type="checkbox" id="enableTranscriptions" /> Enable
         transcriptions</label
