demo: allow user to force the refresh of the list of devices

--- a/packages/media-tools-demo/index.html
+++ b/packages/media-tools-demo/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="container">
       <h1>Audio recording</h1>
+      <button id="getSources">Refresh sources</button>
       <select id="audioSource" disabled>
         <option value="no-device">No audio device found…</option>
       </select>
